# Samudra

./: .dockerignore  .gantry-train  .gitignore  .gitmodules  .local-train  .pre-commit-config.yaml  .python-empireai  .python-gantry  .python-greene  .python-greene-debug  .python-perlmutter  .python-perlmutter-cprofile  .python-perlmutter-launch  .python-perlmutter-worker  .python-version  .resubmit.sh  .run-gantry  .run-local  .secrets.baseline  .sky.yaml  .skyignore  AGENTS.md  CONTRIBUTING.md  LLC_mean_std.py  README.md  REFACTORING_STATUS.md  VALIDATION_FAILURES.md  baseline-04-08.csv  compact1t.csv  compact5.csv  debug_spatial_plots.py  eager-orig-data.csv  environment.yml  eval.sky.yaml  experiment.sky.yaml  foo  implementation_progress.md  index.html  lazy-orig-data.csv  leap_data_transfer.py  (+40 more)
.cargo/: config.toml
.github/: CODEOWNERS
JOBS/: eval_llc_patch.sh  eval_llc_patch_normal.sh  eval_test_om4.sh  mult-train_llc.sh  rerun_val.sh  shardtensor_op_probe.sh  submit_diagnose_matrix.sh  train_LLC.sh  train_OM4.sh  train_llc.sh  train_llc_2.sh  train_llc_normal.sh  train_llc_normal_2.sh  train_llc_normal_probe.sh  train_llc_replay---.sh  train_llc_replay.sh  train_llc_replay_003-boundary.sh  train_llc_replay_2.sh  train_llc_replay_3.sh  train_llc_replay_quad_agulhas.sh  train_llc_replay_quad_agulhas_2.sh  train_llc_replay_shard.sh  train_llc_replay_shard_test-dense.sh  train_llc_replay_shard_test.sh  train_llc_replay_testing.sh  train_llc_reservation.sh  train_llc_temporal_subset.sh  viz_test_om4.sh
LICENSES/: LicenseRef-Logo.txt
configs/: conf.yaml  early_dropout.yaml  eval_cm4.yaml  eval_cm4_cf.yaml  eval_cm4_early40yrs.yaml  eval_cm4_thermo.yaml  eval_om4.yaml  eval_om4_crps.yaml  eval_om4_crps_dynamic_big.yaml  eval_om4_crps_dynamic_big_deterministic.yaml  eval_om4_crps_late_injection.yaml  eval_om4_crps_late_injection_deterministic.yaml  eval_om4_halfdeg.yaml  eval_samudra_cm4_long.yaml  eval_samudra_om4.yaml  eval_samudra_om4_long.yaml  gantry_eval_cm4.yaml  gantry_eval_cm4_cf.yaml  gantry_train_cm4.yaml  gantry_train_cm4_CF_test.yaml  gantry_train_cm4_thermo.yaml  gantry_train_cm4_thermodynamic.yaml  s3_checkpoints.yaml  slurm_empireai_train_cm4.yaml  slurm_empireai_train_cm4_thermo.yaml  slurm_perlmutter_train_cm4.yaml  slurm_perlmutter_train_cm4_JRS.yaml  slurm_perlmutter_train_cm4_thermo.yaml  slurm_perlmutter_train_cm4_with_om4configs.yaml  slurm_perlmutter_train_om4-loader-version-lazy.yaml  slurm_perlmutter_train_om4-loader-version.yaml  slurm_perlmutter_train_om4.yaml  slurm_perlmutter_train_om4_lazy_compact.yaml  slurm_perlmutter_train_om4_torch.yaml  slurm_perlmutter_train_samudra_om4.yaml  slurm_perlmutter_train_samudra_om4_thermodynamic.yaml  slurm_train_cm4_thermo.yaml  test_eval_om4.yaml  train_LLC.yaml  train_cm4.test.yaml  (+40 more)
containers/: Dockerfile.physicsnemo-25.11  Dockerfile.physicsnemo-26.05  README.md
data/: .gitignore  README.md  mamba_env.yaml  pyproject.toml
data/.github/workflows/: tests.yaml  tests_xesmf.yaml
data/book/: environment.yaml
data/notebooks/: Check_Processing.ipynb  Check_Processing.py  Trend_comparison.ipynb  Trend_comparison.py  dev_preprocessing_om4.py  find_repeat_year_for_rollout_stability_test.py  input_tests.ipynb  input_tests.py  nan-test-OM4.py  preprocessing.py  transfer-om4-from-greene.py  validation_plots.py  vesri_plots.py  xesmf_area_comparison.ipynb  xesmf_area_comparison.py
data/notebooks/data-transfer/: pm-gauth.py
data/ocean_emulators/: __main__.py  dataset_validation.py  make_norm_datasets.py  nc_to_zarr.py  plotting.py  postprocessing.py  preprocessing.py  schema.py  utils.py
data/ocean_emulators/model_preprocessing/: gfdl_om4.py
data/ocean_emulators/simulation_preprocessing/: gfdl_cm4.py  gfdl_om4.py  interpolate.py
data/ocean_preprocessing/: __init__.py  __main__.py  areacello_xesmf_check.py  backfill_grid_coords.py  dataset_validation.py  make_duacs_5day.py  make_norm_datasets.py  nc_to_zarr.py  plotting.py  postprocessing.py  preprocessing.py  schema.py  utils.py
data/ocean_preprocessing/simulation_preprocessing/: gfdl_cm4.py  gfdl_om4.py  interpolate.py
data/tests/: __init__.py  data.py  test_backfill.py  test_data.py  test_make_duacs_5day.py  test_postprocessing.py  test_preprocessing.py  test_simulation_preprocessing.py  test_utils.py
docs/: 404.html  config.md  contributing.md  data.md  datasets.md  empireai_nvl72_nccl_validation_failures.md  eval.md  index.html  index.md  releasing.md  review_guidelines.md  run.md  rust-data-loader-plan.md  rust-data-loader-qualification.md  shardtensor_phase2.md  stepper.md  torch.md  train.md  viz.md
docs-src/: eval.md
logs/: 2026-03-08-samudra_llc:all_time_test:all_fields-all_depths,extent=719-10196740.out  2026-03-10-samudra_llc:all_time_test_cont:all_fields-all_depths,extent=719-10394057.out  2026-03-11-samudra_llc:all_time_test_cont:all_fields-all_depths,extent=719-10435235.out  2026-03-12-samudra_llc:all_time_test_cont:all_fields-all_depths,extent=719-10481567.out  2026-03-15-samudra_llc:gpu-decompress-test-2gpus,few_cpus:all_fields-depths,loc=(i:0-720,j:0,720)-10563474.out  2026-03-15-samudra_llc:gpu-decompress-test-2gpus:all_fields-depths,loc=(i:2880-3600,j:720,1440)-10563109.out  2026-03-15-samudra_llc:gpu-decompress-test:all_fields-depths,loc=(i:2880-3600,j:720,1440)-10560810.out  2026-03-17-samudra_llc:gpu-decompress-test-Jesse_data:all_fields-depths,loc=(i:0-720,j:0,720)-10605211.out  test_train_LLC_Samudra-7840982.out  test_train_LLC_Samudra-7841078.out  test_train_LLC_Samudra-7843396.out  test_train_LLC_Samudra-8055904.out  test_train_LLC_Samudra-8056634.out  test_train_LLC_Samudra-8056973.out  test_train_LLC_Samudra-8057261.out  test_train_LLC_Samudra-8057311.out  test_train_LLC_Samudra-8057726.out  (+20 more)
repro/torch_nccl_p2p/: .gitignore  nccl_barrier_repro.py  pyproject.toml  submit_torch.sbatch
rust/crab_load/: Cargo.lock.license  Cargo.toml  README.md  pyproject.toml  samudra_rust_loader.pyi
rust/crab_load/src/: lib.rs
rust/crab_load/tests/: test_extension.py
rust/ocean_loader/: Cargo.toml  pyproject.toml
(+1323 files in other folders)
