[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "Ocean Emulators"
description = "Train and evaluate ocean model emulators"
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
keywords = ["ocean", "climate", "machine learning", "emulation"]
classifiers = [
    "Intended Audience :: Science/Research",
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence"
]
dynamic = ["dependencies", "optional-dependencies", "version"]

[tool.setuptools.dynamic]
dependencies = { file = "requirements.txt" }

[tool.setuptools.packages]
find = {}

[tool.mypy]
ignore_missing_imports = true
check_untyped_defs = true

[tool.ruff.lint]
select = ["D", "E", "F", "I", "W"]
ignore = ["D1", "D200", "D205", "D212", "E203", "W293", "F541", "E402"]

[tool.ruff.lint.per-file-ignores]
"*/__init__.py" = ["F401"]
"scripts/*" = ["D"]
"test_*.py" = ["D"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.isort]
split-on-trailing-comma = false