[build-system]
build-backend = "setuptools.build_meta"

requires = [ "setuptools", "wheel" ]

[project]
name = "ocean-emulators"
description = "Train and evaluate ocean model emulators"
readme = "README.md"
keywords = [ "climate", "emulation", "machine learning", "ocean" ]
license = { file = "LICENSE" }
requires-python = ">=3.10"
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dynamic = [ "dependencies", "optional-dependencies", "version" ]

[dependency-groups]
dev = [
  "hypothesis[numpy]>=6.127.2",
  "pytest>=8.3.4",
]

[tool.setuptools.dynamic]
dependencies = { file = "requirements.txt" }

[tool.setuptools.packages]
find = {}

[tool.ruff]
lint.select = [ "D", "E", "F", "I", "W" ]
lint.ignore = [ "D1", "D200", "D205", "D212", "E203", "E402", "F541", "W293" ]
lint.per-file-ignores."*/__init__.py" = [ "F401" ]
lint.per-file-ignores."scripts/*" = [ "D" ]
lint.per-file-ignores."test_*.py" = [ "D" ]
lint.isort.split-on-trailing-comma = false
lint.pydocstyle.convention = "google"

[tool.pytest.ini_options]
markers = [
  "manual: marks tests as manually run (deselect with '-m \"not manual\"').",
  "cuda: marks tests that need a CUDA-enabled device to run (deselect with '-m \"not cuda\"').",
]
pythonpath = [
  "src",
]

[tool.mypy]
ignore_missing_imports = true
check_untyped_defs = true
