[build-system]
build-backend = "setuptools.build_meta"

requires = ["setuptools", "wheel"]

[project]
name = "ocean-emulators"
description = "Train and evaluate ocean model emulators"
readme = "README.md"
keywords = ["climate", "emulation", "machine learning", "ocean"]
license = { file = "LICENSE" }
requires-python = ">=3.11"
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
  "cftime",
  "dask",
  "matplotlib",
  "numpy<2",      # There is some incompatibility between a dependency and numpy 2+
  "torch~=2.2.1",
  "wandb",
  "xarray[io]",
  "pyyaml",
  "dacite",
  "einops",
  "torchinfo",
  "zarr",
  "jaxtyping",
]
version = "2025.1.0"

[dependency-groups]
dev = [
  "beartype>=0.20",
  "hypothesis[numpy]>=6.127.2",
  "pytest>=8.3.4",
  "pytest-benchmark[histogram]>=5.1",
  "pytest-profiling>=1.8.1",
  "snakeviz>=2.2.2",
]

[tool.setuptools.dynamic]
dependencies = { file = "requirements.txt" }

[tool.setuptools.packages]
find = {}

[tool.ruff]
lint.select = ["D", "E", "F", "I", "W"]
# F722: https://docs.kidger.site/jaxtyping/faq/#flake8-or-ruff-are-throwing-an-error
lint.ignore = [
  "D1",
  "D200",
  "D205",
  "D212",
  "E203",
  "E402",
  "F541",
  "F722",
  "W293",
]
lint.per-file-ignores."*/__init__.py" = ["F401"]
lint.per-file-ignores."scripts/*" = ["D"]
lint.per-file-ignores."test_*.py" = ["D"]
lint.isort.split-on-trailing-comma = false
lint.pydocstyle.convention = "google"

[tool.pytest.ini_options]
markers = [
  "manual: marks tests as manually run (deselect with '-m \"not manual\"').",
  "cuda: marks tests that need a CUDA-enabled device to run (deselect with '-m \"not cuda\"').",
]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "--jaxtyping-packages=data,datasets,beartype.beartype"

[tool.mypy]
ignore_missing_imports = true
check_untyped_defs = true
