[project]
name = "torch-nccl-p2p-repro"
version = "0.1.0"
description = "Minimal NCCL P2P repro for single-node 8-GPU Torch runs."
requires-python = ">=3.10"
classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]
dependencies = [
  "torch>=2.6",
]

[tool.uv]
package = false
