[build-system]
build-backend = "maturin"

requires = [ "maturin>=1.9,<2" ]

[project]
name = "tide"
requires-python = ">=3.12"
classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]
dynamic = [ "version" ]

[tool.maturin]
features = [ "pyo3/extension-module" ]
